cmake_minimum_required(VERSION 3.0)

PROJECT("ul_ftdi")

SET(ul_ftdi_VERSION 0.0.1)

ADD_LIBRARY(TARGET_ul_ftdi MODULE _ul_ftdi.c)
TARGET_LINK_LIBRARIES(TARGET_ul_ftdi ${LUA_LIBRARIES} ${LIBFTDI_LIBRARY} ${LIBUSB_LIBRARY} ${LIBUSB_LDFLAGS})
TARGET_INCLUDE_DIRECTORIES(TARGET_ul_ftdi PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${LUA_INCLUDE_DIR} ${LIBFTDI_INCLUDE_DIRECTORIES} ${LIBUSB_INCLUDE_DIRECTORIES})
SET_TARGET_PROPERTIES(TARGET_ul_ftdi PROPERTIES PREFIX "" OUTPUT_NAME "ul_ftdi")

# On mingw link all compiler libraries static.
IF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))
	SET_PROPERTY(TARGET TARGET_ul_ftdi PROPERTY LINK_FLAGS "-static-libgcc")
ENDIF((${CMAKE_SYSTEM_NAME} STREQUAL "Windows") AND (${CMAKE_COMPILER_IS_GNUCC}))

